# FIIT-SPAASM-SHELL

./: CMakeLists.txt  CMakePresets.json  arguments.c  arguments.h  client.c  client.h  common.c  common.h  kshell.c  kshell.h  parser.c  parser.h  server.c  server.h  tests.c
